--- a/index.html
+++ b/index.html
@@ -1,57 +1,38 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Gitastreet.GitHub.io by GitaStreet</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/GitaStreet">View On GitHub</a></li>
-        </nav>
-      </div><!-- end header -->
-
-    <div class="wrapper">
-
-      <section>
-        <div id="title">
-          <h1>Gitastreet.GitHub.io</h1>
-          <p></p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/GitaStreet">GitaStreet</a></span>
-             </div>
-
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p><a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
- Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you pr, push a branch named <code>gh-pages</code> to your repository to create a page manually.  </p>
-
- </section>
-
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
-</html>
+<html ⚡> <head><meta charset=utf-8><script async src=https://cdn.ampproject.org/v0.js></script><script async custom-element=amp-accordion src=https://cdn.ampproject.org/v0/amp-accordion-0.1.js></script><title>Gita Street</title><link rel=canonical href=https://gitastreet.github.io/gitastreet/><meta name=viewport content=width=device-width,minimum-scale=1,initial-scale=1><style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript><style amp-custom>
+    @media screen and (min-width: 800px) {
+        main {
+        max-width: 50%;
+        margin: auto;
+        }
+    }
+    section[expanded] .show-more {
+        display: none;
+    }
+    section:not([expanded]) .show-less {
+        display: none;
+    }
+	.nested-accordion h4 {
+        font-size: 14px;
+        background-color: #ddd;
+    }
+     .logo {
+    background-position: left 16px center;
+    background-repeat: no-repeat;
+    background-image: -webkit-image-set(
+      url(/img/ic_menu_white_1x_web_24dp.png) 1x,
+      url(/img/ic_menu_white_2x_web_24dp.png) 2x
+      );
+    background-color: #333;
+    text-align: left;
+    padding: 16px;
+    padding-left: 72px;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+  }
+  .logo > a {
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+    text-transform: uppercase;
+  }
+</style></head> <body> <main><div class=logo> <a href=/> AMP test by Gita</a> </div><p>I am always interested in learning more about SEO and WordPress - WordPress theme design and simple WordPress plugins. I love Sass and Bootstrap, but also love trying (to me) new stuff like Zurb Foundation, LESS, Susy and Bourbon. I have also played with AngularJS and AngularUI - but unfortunately, I haven't had time to look into the new AngularJS 2 yet.</p><p>I currently play with Accelerated Mobile Pages and Jekyll.</p> <p><a href=http://streetpatrol.com/>Upcoming project</a> is about technical tips. </p> <p>Project maintained by <a href=https://github.com/GitaStreet>GitaStreet</a></p> <amp-accordion> <section> <h4>Section 1</h4> <p>Bunch of content.</p> </section> <section> <h4>Section 2</h4> <amp-accordion class=nested-accordion> <section> <h4>Nested Section 2.1</h4> <p>Bunch of content.</p> </section> <section> <h4>Nested Section 2.2</h4> <p>Bunch of more content.</p> </section> </amp-accordion> </section> </amp-accordion></main></body> </html> 
